--- a/style.css
+++ b/style.css
@@ -5,18 +5,18 @@ html {
 }
 
 body,html {
-  margin: 0;
-  padding: 0;
+
   font-family: sans-serif;
 }
 
 .keys {
   display: flex;
   flex: 1;
-  min-height: 100vh;
+  min-height: 65vh;
   align-items: center;
   justify-content: center;
 }
+
 
 .key {
   border: .4rem solid black;
@@ -52,8 +52,29 @@ kbd {
 
 .main {
   text-align: center;
-  margin-top: 1rem;
 }
+
+.drums {
+  text-align: center;
+  display:block;
+  align-items: center;
+  justify-content: center;
+  font-size: large;
+}
+
+input[type='checkbox'] {
+  -webkit-appearance:none;
+  width:60px;
+  height:30px;
+  background:white;
+  border-radius:5px;
+  border:8px solid #555;
+}
+input[type='checkbox']:checked {
+  background: #ffc600;
+}
+
+
 
 @media(max-width: 650px) {
 
